<resources>
    <string name="app_name">LDBeauty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="Title">Title</string>
    <string name="body">Body</string>
    <string name="add_info">Add Information</string>
    <string name="erro_missin_title">Please write Info Title</string>
    <string name="erro_missin_info">Please write Information describe the title</string>
    <string name="salon_details"><u>Salon Details</u></string>
    <string name="app_owner">App Owner</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="userEmail">User Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="verify">Verify Password</string>
    <string name="userPhone">User Phone Number</string>
    <string name="salonName">Salon Name</string>
    <string name="salonCity">Salon City</string>
    <string name="salonPhone">Salon Phone Number</string>
    <string name="title">Title</string>
    <string name="addInfo">Add Info</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="login_underline"><u>Login</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="showmore">Show more</string>
    <string name="showless">show less</string>
    <string name="appointment_details"><u>Appointment_Details</u></string>
    <string name="service_duration_min">Service duration\n in (min)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_my_picture">Change my picture</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="save">save</string>
    <string name="registration_date">Registration Date:</string>
    <string name="last_update">Last Update:</string>
    <string name="my_feedback">My Feedback</string>
    <string name="my_appointments">My Appointments</string>
    <string name="nothing_added_yet">Nothing Added Yet</string>
    <string name="no_appointment_yet">No Appointment yet</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="log_out">Log Out</string>
    <string name="log_in_sign_up">Log in/Sign up</string>
    <string name="my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="about_app">About App</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="client">Client</string>
    <string name="salon_owner">Salon Owner</string>
    <string name="log_in_as">Log in as:</string>
    <string name="hello_gorgeous">Hello gorgeous</string>
    <string name="user_email">User Email</string>
    <string name="password2">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="verify_password">Verify Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Enter_User_Name">Enter User Name</string>
    <string name="Enter_your_phone_number">Enter your phone number</string>
    <string name="phone_error">Your phone number must contain at least 8 digit</string>
    <string name="password_Error">weak password(must contain a digit ,uppercase characters and at least 6 characters)</string>
    <string name="valid_email">Please enter a valid email address</string>
    <string name="Updating">Updating ...</string>
    <string name="Failed">Failed</string>
    <string name="Cart_Warning">Cart Warning</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="booked">booked</string>
    <string name="booked_appointment">You need to delete booked items</string>
    <string name="Total">\Total: \</string>
    <string name="R.O">\ R.O\</string>
    <string name="updated_comment">updated comment</string>
    <string-array name="signup_options">
        <item>Client</item>
        <item>Salon Owner</item>
    </string-array>

</resources>
