<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SP.SPSignUpFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/halfrose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_name"
        app:layout_constraintStart_toStartOf="@+id/cv_name"
        app:layout_constraintTop_toBottomOf="@+id/cv_name">

        <EditText
            android:id="@+id/ti_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="19dp"
        android:src="@drawable/outline_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_name"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_user"
        app:layout_constraintStart_toStartOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/iv_user">

        <EditText
            android:id="@+id/ti_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <EditText
            android:id="@+id/ti_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">


        <EditText
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_verPass"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F3F3F3"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <EditText
            android:id="@+id/ti_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/verify_password"
            android:inputType="textVisiblePassword"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rectangle"
        android:backgroundTint="#DA6EA4"
        android:gravity="center"
        android:text="@string/sign_up2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_verPass">

    </Button>

    <TextView
        android:id="@+id/tv_dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/btn_signUp">

    </TextView>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:text="@string/login_underline"
        android:textColor="@color/pink_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_signUp"
        app:layout_constraintStart_toEndOf="@+id/tv_dont"
        app:layout_constraintTop_toTopOf="@+id/tv_dont">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>


