<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginChoicesFragment">


    <TextView
        android:id="@+id/ld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="LD"
        android:layoutDirection="ltr"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/beauty"
        app:layout_constraintEnd_toStartOf="@+id/beauty"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/beauty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="cursive"
        android:text="Beauty"
        android:layoutDirection="ltr"
        android:textColor="#B61F7F"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="134dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logpict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/log_in_as"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/btn_client"
        app:layout_constraintStart_toStartOf="@+id/btn_client"
        app:layout_constraintTop_toBottomOf="@+id/beauty" />


    <Button
        android:id="@+id/btn_client"
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/btn_rectangle"
        android:backgroundTint="#DA6EA4"
        android:text="@string/client"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_salonOwner"
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/btn_rectangle"
        android:backgroundTint="#DA6EA4"
        android:text="@string/salon_owner"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_client"
        app:layout_constraintStart_toStartOf="@+id/btn_client"
        app:layout_constraintTop_toBottomOf="@+id/btn_client" />

    <Button
        android:id="@+id/tv_appOwner"

        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/btn_rectangle"
        android:backgroundTint="#DA6EA4"
        android:text="@string/app_owner"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_salonOwner"
        app:layout_constraintStart_toStartOf="@+id/btn_salonOwner"
        app:layout_constraintTop_toBottomOf="@+id/btn_salonOwner"
         />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:src="@drawable/rose1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:src="@drawable/rose2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_appOwner"
        app:layout_constraintStart_toStartOf="@+id/tv_appOwner">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent">

            <TextView
                android:id="@+id/tv_dont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_forget"
                app:layout_constraintStart_toStartOf="@+id/btn_login">

            </TextView>

            <TextView
                android:id="@+id/tv_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/sign_up_underline"
                android:textColor="@color/pink_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_forget"
                app:layout_constraintStart_toEndOf="@+id/tv_dont"
                app:layout_constraintTop_toTopOf="@+id/tv_dont">

            </TextView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>