<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client.ClientProfileFragment"
    >


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/upcorener"
        android:layoutDirection="ltr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#B14F8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="User Name"
        android:textColor="#F8F8F8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/outline_person" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:text="@string/edit_my_profile"
                android:textColor="@color/pink_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/iv2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:tint="@color/white"

                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/outline_feedback"
                />

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/my_feedback"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/iv23"
                app:layout_constraintStart_toEndOf="@+id/imageView23"
                app:layout_constraintTop_toTopOf="@+id/imageView23" />

            <ImageView
                android:id="@+id/iv23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                app:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_appointment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_feedback">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/outline_event"
                app:tint="?attr/colorControlNormal"
                />

            <TextView
                android:id="@+id/tv_appointment"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="3dp"
                android:padding="10dp"
                android:text="@string/my_appointments"
                android:textColor="@color/pink_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/iv22"
                app:layout_constraintStart_toEndOf="@+id/imageView22"
                app:layout_constraintTop_toTopOf="@+id/imageView22" />

            <ImageView
                android:id="@+id/iv22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/halfrose"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>